--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -14,7 +14,7 @@
 			},
 			"publisher": {
 				"@type": "Organization",
-				"name": "Historia Core Group, Inc.",
+				"name": "Historia Core",
 				"logo": {
 					"@type": "ImageObject",
 					"url": "https://docs.historia.network/en/latest/_images/historia_logo.png",
